<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 应用程序全局字符串 -->
    <string name="app_name">e袋洗</string>
    <string name="to_html_text">现在充值最高返260元！→</string>
    <string name="main_page_city">北京</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="choice_qu_time">"  "+请选择上门时间</string>
    <string name="title_activity_placeorder">PlaceorderActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="network_error">"当前网络不可用，请检查网络连接"</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_footer_hint_normal"></string>
    <string name="xlistview_footer_hint_ready"></string>
    <string name="tb_munion_tip_download_prefix">正在下载:</string>

    <!-- 优惠券页面字符串资源 -->
    <string name="activity_coupon_title">优惠券</string>
    <string name="activity_coupon_exchange">兑换</string>

    <!-- 绑定实体卡页面字符串资源 -->
    <string name="activity_bindcard_title">实体会员卡</string>
    <string name="activity_bindcard_cardedit_hint">输入实体卡号</string>
    <string name="activity_bindcard_passedit_hint">输入实体卡密码</string>
    <string name="activity_bindcard_cancel">取消</string>
    <string name="activity_bindcard_bind">绑定</string>
    <string name="dingdanbianhao">订单编号:</string>
    <string name="wuliuzhuangtai">物流状态:</string>
    <string name="dingdanzonge">订单总额:</string>
    <string name="quxiaodingdan">取消订单</string>
    <string name="lijizhifu">立即支付</string>
    <string name="dingdanzhuangtai">订单状态:</string>
    <string name="isdesc">isdesc</string>
    <string name="pingjia">评价</string>
    <string name="dingdanxinxi">订单信息</string>
    <string name="confirm_title">提示</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="content_description_icon">icon</string>
    <string name="refresh">刷新</string>
    <string name="processing">加载中</string>
    <string name="download">下载</string>
    <string name="download_fail">下载安装包失败</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="redo">重试</string>
    <string name="install_msp">你尚未安装支付宝移动快捷支付服务，请立即安装</string>
    <string name="install_alipay">你尚未安装支付宝钱包，请立即安装</string>
    <!-- 用户协议页面字符串资源 -->
    <string name="activity_userprotocol_title">用户协议</string>
    <string name="activity_userprotocol_content_title">"关于e袋洗"使用协议</string>
    <string name="activity_userprotocol_content">欢迎使用e袋洗网站及响应的手机应用软件，以使用我我们提供的产品及服务</string>

    <!-- 我的常用地址页面字符串资源 -->
    <string name="activity_myaddress_title">常用地址</string>

    <!-- WebView页面使用的字符串资源 -->
    <string name="activity_web_title">网页</string>

    <!-- 开屏图页面字符串资源 -->
    <string name="activity_splash_startuse">立即体验</string>

    <!-- 无网络页面字符串资源 -->
    <string name="activity_nonenet_title">无可用网络</string>
    <string name="activity_aboutus_title">关于e袋洗</string>
    <string name="activity_aboutus_weibo">微博: http://m.weibo.cn/d/ewashing</string>
    <string name="activity_aboutus_weixin">微信: e袋洗</string>
    <string name="activity_aboutus_net">官网: http://www.edaixi.com/</string>
    <!-- 支付信息来源 -->
    <string name="Alipay_depostie">e袋洗安卓客户端充值</string>
    <string name="Alipay_pay">e袋洗安卓客户端付款</string>
    <string name="servies_time">服务时间:</string>
    <string name="wx_share_content">e袋洗发洗衣费啦~我刚获得10多张优惠券，太爽啦！送你一张洗衣券，一起来享受！</string>
    <string name="ninhaimeiyoutianjiadizhi">您 还 没 有 添 加 地 址</string>
    <string name="fuwushijian">服务时间:</string>
    <string name="fuwushijianduan">1月22日 </string>
    <string name="dingdanjiage">90元</string>

    <!-- umeng 需要字符串 -->
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_download_notification_prefix">Downloading: </string>
    <string name="umeng_common_pause_notification_prefix">Pause: </string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_download_failed">Download Failed! </string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_icon">icon</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="UMNewVersion">Latest version: </string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateSize">Update size: </string>
    <string name="UMTargetSize">Target size: </string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMDialog_InstallAPK"></string>
    <string name="UMUpdateCheck"></string>
    <string name="dituxuanzhi">地图选址</string>
    <string name="baocun">保存</string>

    <!-- 高德地图 字符串 -->
    <string name="no_result">"对不起，没有搜索到相关数据！"</string>
    <string name="tianjia">添加</string>
    <string name="lianxiren">您的姓名</string>
    <string name="nvshi">"女士   "</string>
    <string name="nanshi">"男士   "</string>
    <string name="shoujihao">手机号码</string>
    <string name="shurudizhi">请输入小区或大厦</string>
    <string name="xiangxidizhi">请输入门牌号等详细地址</string>
    <string name="cancle_order_title">为什么不洗了呢 ?</string>
    <string name="cancle_order_tips">" 您的订单已经派单，\n 多次取消已经派单的订单会影响信誉哟"</string>
    <string name="qingshurushoujihao"> 请输入手机号 </string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="qingshuruyanzhengma"> 请输入验证码</string>
    <string name="lijidenglu">登录</string>
    <string name="xiadan">下单</string>
    <string name="querenquxiao">确认取消</string>
    <string name="fanhui">返回</string>
    <string name="xiyizhiliang">洗衣质量</string>
    <string name="kuaidisudu">快递速度</string>
    <string name="fuwutaidu">服务态度</string>
    <string name="tijiao">提交</string>
    <string name="quxiao">取消</string>
    <string name="bangding">绑定</string>
    <string name="wuliuxinxi">物流信息</string>
    <string name="cuidan">催单</string>
    <string name="pingjiazhuanyue">评价赚余额</string>

</resources>