<?xml version="1.0" encoding="utf-8"?>
<!-- 绑定实体卡页面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/pay_title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/e_h_top_bar" >

        <ImageView
            android:id="@+id/activity_bingcard_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:contentDescription="@null"
            android:src="@drawable/login_back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/activity_bindcard_title"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/activity_bindcard_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_activity_bindcard_bind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/activity_bindcard_card"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_bindcard_cardedit_hint"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/bindcard_activity_cardedit_hintcolor"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/gray" />

                <EditText
                    android:id="@+id/activity_bindcard_pass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_bindcard_passedit_hint"
                    android:inputType="number|textPassword"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/bindcard_activity_cardedit_hintcolor"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/activity_bindcard_cancel"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:background="@drawable/immediatelpay_btn"
                    android:gravity="center"
                    android:text="@string/quxiao"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bindcard_bind_btn"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/blue_btn"
                    android:gravity="center"
                    android:text="@string/bangding"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>