<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/place_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/addads_title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/e_h_top_bar" >

        <ImageView
            android:id="@+id/addaddress_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:contentDescription="@null"
            android:src="@drawable/login_back_btn" />

        <TextView
            android:id="@+id/titel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tianjia"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/add_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/baocun"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <com.edaixi.view.CleanEditText
        android:id="@+id/reciever"
        style="@style/textsize_3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/addads_title"
        android:background="@android:color/white"
        android:drawableRight="@drawable/clean_press"
        android:gravity="center_vertical"
        android:hint="@string/lianxiren"
        android:maxLength="6"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/bindcard_activity_cardedit_hintcolor"
        android:textCursorDrawable="@null" />

    <View
        android:id="@+id/line_address_1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/reciever"
        android:layout_marginLeft="10dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_address_gender"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/line_address_1"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_lady"
            style="@style/textsize_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/address_press"
            android:text="@string/nvshi" />

        <TextView
            android:id="@+id/tv_men"
            style="@style/textsize_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/address_default"
            android:paddingLeft="35dp"
            android:text="@string/nanshi" />
    </LinearLayout>

    <View
        android:id="@+id/line_address_2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/ll_address_gender"
        android:layout_marginLeft="10dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/rl_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/line_address_2"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical" >

        <AutoCompleteTextView
            android:id="@+id/tel_edit"
            style="@style/textsize_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/white"
            android:hint="@string/shoujihao"
            android:inputType="phone"
            android:maxLength="11"
            android:textColorHint="@color/bindcard_activity_cardedit_hintcolor"
            android:textCursorDrawable="@null" />

        <ImageView
            android:id="@+id/clear_btn_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tel_edit"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tel_edit"
            android:contentDescription="@null"
            android:padding="5dp"
            android:src="@drawable/clean_press"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:id="@+id/line_address_3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rl_edit_phone"
        android:layout_marginLeft="10dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/rl_to_mapview"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/line_address_3"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/edit_map_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:paddingRight="15dp"
            android:src="@drawable/re_location_logo" />

        <TextView
            android:id="@+id/tv_address_edit"
            style="@style/textsize_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/edit_map_logo"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/shurudizhi"
            android:textColorHint="@color/bindcard_activity_cardedit_hintcolor"
            android:textCursorDrawable="@null" />
    </RelativeLayout>

    <View
        android:id="@+id/line_address_4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rl_to_mapview"
        android:layout_marginLeft="10dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/rl_city_area"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/line_address_4"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_select_city"
            style="@style/textsize_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="选择城市"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_select_area"
            style="@style/textsize_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_select_city"
            android:hint="选择区域"
            android:paddingLeft="20dp"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:src="@drawable/next" />
    </RelativeLayout>

    <View
        android:id="@+id/line_address_5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rl_city_area"
        android:layout_marginLeft="10dp"
        android:background="@color/gray" />

    <com.edaixi.view.CleanEditText
        android:id="@+id/street_edit"
        style="@style/textsize_3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/line_address_5"
        android:background="@android:color/white"
        android:drawableRight="@drawable/clean_press"
        android:gravity="center_vertical"
        android:hint="@string/xiangxidizhi"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/bindcard_activity_cardedit_hintcolor"
        android:textCursorDrawable="@null" />

    <View
        android:id="@+id/line_address_6"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/street_edit"
        android:layout_marginLeft="10dp"
        android:background="@color/gray" />

</RelativeLayout>